# todo-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  seed.py  up_dev.sh  up_test.sh
.circleci/: config.yml
app/core/: config.py  database.py
app/models/: enums.py  task.py
app/repositories/: task_repository.py
app/routers/: task_router.py
app/schemas/: task.py
app/services/: task_service.py
migrations/: env.py
migrations/versions/: 613c6b2ee703_create_initial_tables.py  8f4d5fde0a3b_add_proority_column_to_tasks.py  a069551148e0_create_tasks_table.py
tests/: conftest.py  test_tasks.py
